Hands-on/1-vpc.tf
resource "aws_vpc" "main"{
    cidr_block = "10.0.0.0/16"

    tags={
        Name="main"
    }
}
